<resources>
    <string name="app_name">Move Me</string>
    <string name="lbl_move_me">Move Me</string>
    <string name="lbl_bem_vindo">Bem-vindo ao Move</string>
    <string name="lbl_voce_e">Acessar como?</string>
    <string name="btn_motorista">Motorista</string>
    <string name="btn_passageiro">Passageiro</string>
    <string name="lbl_sua_primeira_vez_entrar_usuario">Sua primeira vez?</string>
    <string name="lbl_cadastre_se_aqui_usuario">cadastre-se</string>
    <string name="lbl_aqui_usuario">aqui</string>
    <string name="lbl_usuario">Usuário</string>
    <string name="lbl_senha">Senha</string>
    <string name="lbl_esqueceu_senha">Esqueceu a senha?</string>
    <string name="lbl_redefinir">redefinir</string>
    <string name="lbl_acessar">Acessar</string>
    <string name="lbl_nome_cadastro_passageiro">Nome</string>
    <string name="lbl_sobrenome_cadastro_passageiro">Sobrenome</string>
    <string name="lbl_cpf_passageiro">CPF</string>
    <string name="lbl_email_passageiro">Recuperação de senha</string>
    <string name="lbl_telefone_passageiro">Telefone</string>
    <string name="lbl_senha_passageiro">Senha</string>
    <string name="lbl_esqueci_minha_senha_parte_1">Recuperar Senha</string>
    <string name="lbl_digite_email">Digite o e-mail da conta:</string>
    <string name="lbl_buscar">Buscar</string>
    <string name="lbl_local_recuperacao">Acessar e-mail da conta</string>
    <string name="lbl_senha_enviada">Sua nova senha foi enviada</string>
    <string name="lbl_resto_mensagem">para seu e-mail, verifique-o.</string>
    <string name="lbl_bem_vindo_usuario">Bem-vindo</string>
    <string name="lbl_sessao_transporte">Sessão transporte</string>
    <string name="lbl_local_partida">Local de partida</string>
    <string name="lbl_local_destino">Local de destino</string>
    <string name="lbl_solicitarVeiculo">Solicitar veículo</string>
    <string name="lbl_escolher_restaurante">Sessão alimentação</string>
    <string name="lbl_o_que_comer">O que deseja comer?</string>
    <string name="lbl_tempo_mensagem">Tempo estimado de viagem:</string>
    <string name="lbl_guardar_nos_favoritos">Guardar nos favoritos?</string>
    <string name="lbl_iniciar">Iniciar viagem</string>
    <string-array name="cozinhas">
        <item>French</item>
        <item>Japanese</item>
        <item>Desserts</item>
        <item>Seafood</item>
        <item>Asian</item>
        <item>Filipino</item>
        <item>Indian</item>
        <item>korean</item>
        <item>European</item>
        <item>Mexican</item>
        <item>Brasilian</item>
    </string-array>
    <string-array name="avaliacao">
        <item>Excelent</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Average</item>
    </string-array>
    <string-array name="votos">
        <item>0 - 30</item>
        <item>30 - 60</item>
        <item>60 - 90</item>
        <item>90 - 150</item>
        <item>150 - 200</item>
        <item>200 - 300</item>
        <item>+300</item>
    </string-array>
    <string-array name="precoTaxa">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="taxavotos">
        <item>Excellent</item>
        <item>Good</item>
    </string-array>
</resources>
